# Bluegrass-Songbook

./: .env.example  .env.tpl  .gitignore  .mcp.json  AGENTS.md  APP_SPEC.md  CLAUDE.md  LICENSE  PLAN.md  README.md  REMAINING_STEPS.md  RESULTS.md  ROADMAP.md  SESSION-HANDOFF.md  TEF-LOOP-FEASIBILITY.md  batch_output.txt  batch_output_repeat_fix.txt  batch_process.py  batch_run_anchoring_parser.py  batch_run_scoring_parser.py  clean.sh  create_new_spot_check.py  debug_log_parsing.py  dev_dump_parsed.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  sample_from_log.sh  scratch.py  show_tree.sh  test_changes.txt  validation_final.json  validation_report.json  validation_report_final.json  validation_report_new.json  vitest.config.js
.claude/: settings.local.json
analysis_after_repeat_fix/: all_metrics.json  summary_statistics.json
analysis_before_fix/: all_metrics.json  summary_statistics.json
analysis_before_fix_ahundredyears/: all_metrics.json  summary_statistics.json
analysis_before_fix_gonnahavelove/: all_metrics.json  summary_statistics.json
analysis_before_fix_idontcare/: all_metrics.json  summary_statistics.json
analysis_before_fix_nested_font/: all_metrics.json  summary_statistics.json
analysis_before_repeat_fix/: all_metrics.json  summary_statistics.json
analysis_before_section_markers/: all_metrics.json  summary_statistics.json
analysis_before_span_br_fix/: all_metrics.json  summary_statistics.json
analysis_test/: all_metrics.json  summary_statistics.json
analytics/: .env.example  .env.tpl  CLAUDE.md  README.md  dashboard.ipynb  grassiness_analysis.ipynb
chordpro/: 1 Rock N Roll C  W Boogie Blues Man - Mickey Gilley.chordpro  1010 Whippoorwill Lane - Tanya Tucker.chordpro  11  Love - CharlyMcClain.chordpro  11 Months 29 Days - Johnny Paycheck.chordpro  12-12-84 - David Ball.chordpro  1460 Elder Street - Red Sovine.chordpro  16th Avenue - Lacy J Dalton.chordpro  18 Wheels Humming Home Sweet Home - Mac Wiseman.chordpro  19 Years And 1800 Miles - Cal Smith.chordpro  1929 - Merle Haggard.chordpro  1953 Dear John Honky Tonk Blues - Statler Brothers.chordpro  1959 - John Anderson.chordpro  1976 - Alan Jackson.chordpro  20 20 Vision - Ronnie Milsap.chordpro  21 Miles To Lake Charles Prison - Johnny Paycheck.chordpro  24 Karat Heartache - Vern Gosdin.chordpro  24th Hour - Ray Price.chordpro  25 Minutes To Go - Johnny Cash.chordpro  30 Pieces of Silver - Hank Williams Sr.chordpro  (+17044 more)
(+78493 files in other folders)
