[project]
name = "bluegrass-songbook"
version = "0.1.0"
description = "HTML to ChordPro Parser - Converts scraped HTML song files to ChordPro format"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chordpro_parser"]

