[project]
name = "bluegrass-songbook"
version = "0.1.0"
description = "Bluegrass Songbook - Parse, analyze, and search song collections"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "flask>=3.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
analysis = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
search = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/songbook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
